# pbdSBASE

./: BUGS  DESCRIPTION  LICENSE  NAMESPACE  README.md  configure  configure.ac  reconf
R/: get_lib.r  petsc_blas.r  petsc_comm.r  petsc_init.r  petsc_invert.r  petsc_printing.r  petsc_test.r  slepc_comm.r  slepc_expm.r  zzz.r
demo/: 00Index  petsc_test.r  printing.r  test.r
src/: .Makevars.in.swp  Makevars.in  mk  petsc_blas.c  petsc_comm.c  petsc_convert_storage.c  petsc_converters.c  petsc_expm.c  petsc_init.c  petsc_invert.c  petsc_matmatmult.c  petsc_printing.c  petsc_read_file.c  petsc_special.c  petsc_test.c  sbase.h  slepc_comm.c
